# nn-in-a-box

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md
src/: CMakeLists.txt  basic_math.cpp  basic_math.h  deep_net.h  fc_layer.h  gaussian_dist_layer_init.h  layer.h  layer_init.h  main.cpp  nonlinear_func.h  variable.h  zero_layer_init.h
test/: CMakeLists.txt  test_basic_math.cpp
